--- a/style.css
+++ b/style.css
@@ -4,58 +4,50 @@ body{
     background: #777;
     width: 960px;
     font-size: 18px;
-    margin: auto;
-}
-
-div.text-center{
     text-align: center;
+    margin: 0 auto;
 }
 
-#header, #nav, #footer{
+header, nav, footer{
     background: #ebebeb;
     padding: 35px;
     margin: 12px;
+}
+
+.clearfix::after {
+    content: " ";
+    display: block;
     clear: both;
 }
 
-#section{
+section {
     background: #ebebeb;
     float: left;
     width: 495px;
-    margin-top: 12px;
+    padding: 35px 10px 10px 10px;
+    margin-top: 10px;
     margin-left: 12px;
-    margin-bottom: 24px; 
-    padding-top: 30px;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-bottom: 5px;
 }
 
-#article{
+article{
     background: #777;
     color: #ebebeb;
-    margin: 20px 10px 10px 10px;
-    padding-top: 20px;
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-bottom: 7px;
+    padding: 25px 10px 30px 10px;
+    margin-top: 15px;
 }
 
 #articleHeader, #paragraph{
     background: #ebebeb;
     color: #777;
-    margin: 10px;
-    padding: 15px;
+    margin-top: 15px;
+    padding: 15px 10px;
 }
 
-#aside{
+aside{
     background: #ebebeb;
-    float: right;
-    width: 375px;
-    margin-top: 12px;
-    margin-right: 12px;
-    margin-bottom: 24px;
-    padding-top: 30px;
-    padding-left: 15px;
-    padding-bottom: 215px;
+    float: left;
+    width: 38%;
+    padding: 35px 15px 233px 15px;
+    margin-top: 10px;
+    margin-left: 26px;
 }
