--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     margin: 0 auto;
 }
 
-header, nav, footer{
+header, nav{
     background: #ebebeb;
     padding: 35px;
     margin: 12px;
@@ -41,6 +41,8 @@ article{
     color: #777;
     margin-top: 15px;
     padding: 15px 10px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 aside{
@@ -50,4 +52,10 @@ aside{
     padding: 35px 15px 233px 15px;
     margin-top: 10px;
     margin-left: 26px;
+}
+
+footer {
+    background: #ebebeb;
+    padding: 35px;
+    margin: 24px 12px 12px 12px;
 }
