--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body{
     font-family: Arial, Helvetica, sans-serif;
     color: #777;
@@ -48,10 +52,10 @@ article{
 aside{
     background: #ebebeb;
     float: left;
-    width: 38%;
+    width: 43.5%;
     padding: 35px 15px 233px 15px;
     margin-top: 10px;
-    margin-left: 26px;
+    margin-left: 23px;
 }
 
 footer {
