--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ section {
     padding: 35px 10px 10px 10px;
     margin-top: 10px;
     margin-left: 12px;
+    height: 275px;
 }
 
 article{
@@ -53,7 +54,7 @@ aside{
     background: #ebebeb;
     float: left;
     width: 43.5%;
-    padding: 35px 15px 233px 15px;
+    padding: 35px 15px 222px 15px;
     margin-top: 10px;
     margin-left: 23px;
 }
